[gd_scene load_steps=6 format=3 uid="uid://d2a40a41h2rsk"]

[ext_resource type="Theme" uid="uid://bmvf1xw0j8v56" path="res://assets/fonts/text_back.tres" id="1_7k1ek"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_sqtxb"]
[ext_resource type="Theme" uid="uid://ci23fbpwtupdm" path="res://assets/fonts/text_front.tres" id="2_b62ja"]
[ext_resource type="Shader" path="res://assets/shaders/vignette_shader.gdshader" id="2_fb0io"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5kp1y"]
shader = ExtResource("2_fb0io")
shader_parameter/inner_radius = -0.52
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 1.41
shader_parameter/dither_strength = 0.1
shader_parameter/vignette_color = Color(0.0239321, 0.11736, 0.180953, 1)

[node name="PauseMenu" type="Node3D"]
process_mode = 3
script = ExtResource("1_sqtxb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="vignette" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_5kp1y")
offset_right = 1152.0
offset_bottom = 648.0

[node name="title" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = 14.0
offset_right = 21.0
offset_bottom = 54.0

[node name="SUPER" type="Control" parent="CanvasLayer/title"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="S" type="Control" parent="CanvasLayer/title/SUPER"]
layout_mode = 3
anchors_preset = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/title/SUPER/S"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("1_7k1ek")
theme_override_font_sizes/normal_font_size = 100
text = " SUPER"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/title/SUPER/S"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("2_b62ja")
theme_override_font_sizes/normal_font_size = 100
text = " SUPER"
scroll_active = false

[node name="BUBBLE" type="Control" parent="CanvasLayer/title"]
layout_mode = 3
anchors_preset = 0
offset_left = 385.0
offset_right = 425.0
offset_bottom = 40.0

[node name="B" type="Control" parent="CanvasLayer/title/BUBBLE"]
layout_mode = 3
anchors_preset = 0
offset_left = -54.0
offset_right = -54.0

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/title/BUBBLE/B"]
layout_mode = 0
offset_left = 48.0
offset_top = 52.0
offset_right = 978.0
offset_bottom = 204.0
theme = ExtResource("1_7k1ek")
theme_override_font_sizes/normal_font_size = 100
text = " BUBBLE"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/title/BUBBLE/B"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("2_b62ja")
theme_override_font_sizes/normal_font_size = 100
text = " BUBBLE"
scroll_active = false

[node name="BATH" type="Control" parent="CanvasLayer/title"]
layout_mode = 3
anchors_preset = 0
offset_left = 103.0
offset_top = 103.0
offset_right = 143.0
offset_bottom = 143.0

[node name="B" type="Control" parent="CanvasLayer/title/BATH"]
layout_mode = 3
anchors_preset = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/title/BATH/B"]
layout_mode = 0
offset_left = 48.0
offset_top = 52.0
offset_right = 978.0
offset_bottom = 204.0
theme = ExtResource("1_7k1ek")
theme_override_font_sizes/normal_font_size = 100
text = " BATH"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/title/BATH/B"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("2_b62ja")
theme_override_font_sizes/normal_font_size = 100
text = " BATH"
scroll_active = false

[node name="3D" type="Control" parent="CanvasLayer/title"]
layout_mode = 3
anchors_preset = 0
offset_left = 446.0
offset_top = 103.0
offset_right = 486.0
offset_bottom = 143.0

[node name="3" type="Control" parent="CanvasLayer/title/3D"]
layout_mode = 3
anchors_preset = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/title/3D/3"]
layout_mode = 0
offset_left = 48.0
offset_top = 52.0
offset_right = 978.0
offset_bottom = 204.0
theme = ExtResource("1_7k1ek")
theme_override_font_sizes/normal_font_size = 100
text = " 3D"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/title/3D/3"]
layout_mode = 0
offset_left = 48.0
offset_top = 53.0
offset_right = 978.0
offset_bottom = 205.0
theme = ExtResource("2_b62ja")
theme_override_font_sizes/normal_font_size = 100
text = " 3D"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 134.0
offset_top = 356.0
offset_right = 497.0
offset_bottom = 571.0

[node name="continue" type="MenuButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_b62ja")
theme_type_variation = &"FlatMenuButton"
text = "continue"

[node name="restart" type="MenuButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_b62ja")
theme_type_variation = &"FlatMenuButton"
text = "restart level"

[node name="mainmenu" type="MenuButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_b62ja")
theme_type_variation = &"FlatMenuButton"
text = "main menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 877.0
offset_top = 491.0
offset_right = 1119.0
offset_bottom = 633.0

[node name="Music" type="CheckBox" parent="CanvasLayer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_b62ja")
text = "mute music"

[node name="SFX" type="CheckBox" parent="CanvasLayer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_b62ja")
text = "mute SFX"

[connection signal="button_down" from="CanvasLayer/VBoxContainer/continue" to="." method="_on_continue_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/continue" to="." method="_on_continue_mouse_entered"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/restart" to="." method="_on_restart_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/restart" to="." method="_on_restart_mouse_entered"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/mainmenu" to="." method="_on_mainmenu_button_down"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/mainmenu" to="." method="_on_mainmenu_mouse_entered"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer2/Music" to="." method="_on_music_mouse_entered"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer2/Music" to="." method="_on_music_toggled"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer2/SFX" to="." method="_on_sfx_mouse_entered"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer2/SFX" to="." method="_on_sfx_toggled"]
